<resources>
    <!-- General -->
    <string name="app_name">Thanote</string>
    <string name="nav_home">Home</string>
    <string name="nav_collection">Collection</string>
    <string name="nav_setting">Setting</string>
    <string name="button_close">Close</string>
    <string name="button_save">Save</string>

    <!-- Note CardView -->
    <string name="item_note_title">noteTitle</string>
    <string name="item_note_desc">noteDesc</string>
    <string name="item_note_date">noteDate</string>
    <string name="item_note_share">Share this note</string>
    <string name="item_note_fav">Add this note to favorite</string>
    <string name="item_note_thumbnail">Thumbnail</string>

    <!-- Define Custom Strings here -->
    <!-- Home Fragment -->
    <string name="home_fragment_note_detail">Demo Detail</string>
    <string name="home_search_hint">Search anything here…</string>
    <string name="home_image_view_galaxy">galaxy</string>

    <!-- Collection Fragment -->
    <string name="collection_search">CollectionSearch</string>
    <string name="collection_search_hint">Find your collections</string>
    <string name="collection_header">Collections</string>
    <!-- Add Collection Fragment -->
    <string name="new_category">new category</string>

    <!-- Setting Fragment -->
    <string name="setting_header">Setting</string>

    <!-- Note Activity -->
    <string name="note_search_hint">Find your notes</string>
    <!-- Add Note Fragment -->
    <string name="new_note_title">Title</string>
    <string name="new_note_detail">Detail</string>
    <string name="new_note_image_url">Image Url</string>

    <!-- Notification Activity -->
    <string name="notification_activity_alarm">Alarm</string>
    <string name="notification_activity_daily_notification">Daily Notification</string>
    <string name="notification_activity_category">Category</string>

</resources>
