<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edit_text_new_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_note_title"
        android:inputType="textMultiLine"
        android:maxLength="40"/>

    <EditText
        android:id="@+id/edit_text_new_note_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_note_detail"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/edit_text_new_note_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_note_image_url"
        android:inputType="textMultiLine"/>

</LinearLayout>