<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".scenes.notification.NotificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_activity_alarm"
        style="@style/TitleStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DarkGrayContentStyle"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_filter"
            android:text="@string/notification_activity_category"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_apis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:minWidth="200dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DarkGrayContentStyle"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_alarm"
        android:text="@string/notification_activity_daily_notification"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <View
        style="@style/Divider"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_view_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlackContentStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="3">

            <Switch
                android:id="@+id/switch_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:layout_marginEnd="16dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="30dp"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BlueButton"
            android:text="@string/button_close" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BlueButton"
            android:layout_marginStart="16dp"
            android:text="@string/button_save" />

    </LinearLayout>

</LinearLayout>